# GoidaL

./: CMakeLists.txt
include/: Lexer.hpp  Token.hpp
src/: Goida.cpp  Lexer.cpp  Token.cpp
